Polish up broken-apart tests

--- a/test/fixtures/microposts.yml
+++ b/test/fixtures/microposts.yml
@@ -40,7 +40,7 @@ tone:
   created_at: <%= 10.minutes.ago %>
   user: lana
 
-van:
-  content: "Dude, this van's, like, rolling probable cause."
-  created_at: <%= 4.hours.ago %>
-  user: lana
+# van:
+#   content: "Dude, this van's, like, rolling probable cause."
+#   created_at: <%= 4.hours.ago %>
+#   user: lana
