--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,7 @@
 # Ignore bundler config.
 /.bundle
 
+
 # Ignore the default SQLite database.
 /db/*.sqlite3
 /db/*.sqlite3-*
@@ -36,3 +37,6 @@
 
 # Ignore db test files.
 db/test.*
+
+# Ignore Vendored Gems 
+/vendor
