Add tmp to path

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -35,7 +35,7 @@ jobs:
           project-type: bundler
           verbose: true
       - name: TEMP Fix for AppMap Path
-        run: ln -s /usr/local/bin /tmp/
+        run: echo /tmp >> $GITHUB_PATH
       - name: Rails test setup
         run: ./bin/rails db:migrate
       - name: Run tests
