Use the GITHUB_SHA environment variable to get the right revision

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -43,5 +43,5 @@ jobs:
       - name: Archive AppMaps
         uses: getappmap/archive-action@v1-pre.13
         with:
-          revision: $(git rev-parse HEAD)
+          revision: $GITHUB_SHA
           verbose: true
