--- a/.github/workflows/appmap-baseline.yml
+++ b/.github/workflows/appmap-baseline.yml
@@ -1,10 +1,3 @@
-# This workflow uses actions that are not certified by GitHub.
-# They are provided by a third-party and are governed by
-# separate terms of service, privacy policy, and support
-# documentation.
-# This workflow will download a prebuilt Ruby version, install dependencies and run tests with Rake
-# For more information see: https://github.com/marketplace/actions/setup-ruby-jruby-and-truffleruby
-
 name: Run Tests and Archive AppMaps
 
 on: [ push ]
@@ -22,11 +15,9 @@ jobs:
     steps:
       - uses: actions/checkout@v3
       - name: Set up Ruby
-      # To automatically get bug fixes and new Ruby versions for ruby/setup-ruby,
-      # change this to (see https://github.com/ruby/setup-ruby#versioning):
         uses: ruby/setup-ruby@v1
         with:
-          bundler-cache: true # runs 'bundle install' and caches installed gems automatically
+          bundler-cache: true
       - name: Prepare bundle for AppMap installation
         run: bundle config unset deployment
       - name: Install AppMap tools
@@ -37,7 +28,7 @@ jobs:
       - name: Rails test setup
         run: ./bin/rails db:migrate
       - name: Run tests
-        run: ./bin/rails test
+        run: ./bin/rails test || true
       - name: Archive AppMaps
         uses: getappmap/archive-action@v1-pre.13
         with:
