--- a/.github/workflows/appmap-analysis.yml
+++ b/.github/workflows/appmap-analysis.yml
@@ -45,18 +45,11 @@ jobs:
       - name: Analyze AppMaps
         # We want to analyze the AppMaps even if the tests fail.
         if: (success() || failure()) && github.event_name == 'pull_request'
-        uses: getappmap/analyze-action@v1-pre.14
+        uses: getappmap/analyze-action@v0.0.1-pr-comment
         with:
           base-revision: ${{ github.event.pull_request.base.sha }}
           head-revision: ${{ github.event.pull_request.head.sha }}
           github-token: ${{ secrets.GITHUB_TOKEN }}
-      - name: PR Comment AppMap Report
-        # We want to include the full analysis report on the PR even if the tests fail.
-        if: (success() || failure()) && github.event_name == 'pull_request'
-        uses: thollander/actions-comment-pull-request@v2
-        with:
-          filePath: ".appmap/change-report/${{ github.event.pull_request.base.sha }}-${{ github.event.pull_request.head.sha }}/report.md"
-          comment_tag: appmap # This lets AppMap update the initial comment with a new report.
       - name: Archive AppMaps
         # Only run this action when code merges to the mainline
         if: github.event_name != 'pull_request'
